tests/errors/arrays/assign-wrong-element-type.fn
---
Description: Assigning a wrong type through array index
Expected: FN3406
---

type Program
{
    fn Main -> i32
    {
        var arr = [1, 2, 3]
        arr[0] = 1.0
        return 0
    }
}
